minor tree refactorings